# test

./: .gitignore  .mcp.json  CLAUDE.md  bookmarklet.html  build_manual.html  index.html  manifest.json  manual.html  photo_upload.gs  reply_bot.py  reservation_sync.gs  samurai_karte_sync_gas.js  sc-automate.user.js  sc-sync.js  supabase_setup.sql  要求定義.md
.github/workflows/: python-syntax.yml
payroll-automation/: .env.example  .gitignore  README.md  pyproject.toml
payroll-automation/config/: locations.yaml  mf_import_mapping.yaml  payroll_rules.yaml
payroll-automation/docs/: 給与計算自動化_構築書.md  給与計算自動化_設計書.md
payroll-automation/src/payroll/: __init__.py  aggregate.py  cli.py  export_mf.py  fetch.py  models.py  report.py  rules.py  square_client.py  timeutil.py  verify.py
payroll-automation/tests/: helpers.py  test_aggregate.py  test_cli.py  test_export_mf.py  test_fetch.py  test_models.py  test_report.py  test_rules.py  test_verify.py
payroll-automation/tests/fixtures/: mf_result_e2e.csv  mf_result_ok.csv  square_team_members.json  square_timecards_page1.json  square_timecards_page2.json  square_wages.json  square_workweek_configs.json
