[project]
name = "payroll-automation"
version = "0.1.0"
description = "Samurai Beauty 給与計算自動化システム(Square勤怠 → 集計 → MF給与CSV → 検算)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "freezegun>=1.4",
]

[project.scripts]
payroll = "payroll.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
